// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputLabel > renders correctly 1`] = `
<div>
  <div
    class="text-body-medium d-flex align-center text-primary-text"
  >
    string 
    
    
  </div>
  <div
    class="text-body-small text-secondary-text"
  >
    string
  </div>
</div>
`;

exports[`InputLabel > renders correctly in disabled state 1`] = `
<div>
  <div
    class="text-body-medium d-flex align-center"
  >
    string 
    
    
  </div>
  <div
    class="text-body-small text-secondary-text"
  >
    string
  </div>
</div>
`;
